@@ -5,11 +5,9 @@ An EditLine API implementation for the native Windows Console.
 This BSD-licensed library provides command line editing and history
 functions similar to those found in GNU Readline.
 
-Paolo Tosco (a,*)
+Paolo Tosco (*)
 
-a) Department of Drug Science and Technology,
-   University of Turin, via Pietro Giuria 9, 10125 Torino, Italy;
-   e-mail: paolo.tosco.mail@gmail.com
+*) e-mail: paolo.tosco.mail@gmail.com
 
 http://mingweditline.sourceforge.net/
 
@@ -44,7 +42,8 @@ WinEditLine API:
   HIST_ENTRY *next_history()
   int read_history(const char *filename)
   int write_history(const char *filename)
- 
+  int append_history(int nelements, const char *filename)
+  int history_truncate_file(const char *filename, int nlines)
 
 Please refer to the website and to the fully commented source code
 for more detailed and up-to-date information.
